--- a/Zilon.Core/Zilon.Core/Zilon.Core.csproj
+++ b/Zilon.Core/Zilon.Core/Zilon.Core.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net5</TargetFramework>
         <Nullable>enable</Nullable>
-        <LangVersion>8.0</LangVersion>
     </PropertyGroup>
     <ItemGroup>
       <Compile Remove="Tactics\StaticObjectModules\**" />
@@ -16,10 +15,6 @@
       <EmbeddedResource Include="World\NameGeneration\names.json" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="JetBrains.Annotations">
-            <Version>2021.1.0</Version>
-            <ExcludeAssets>runtime; build</ExcludeAssets>
-        </PackageReference>
         <PackageReference Include="JsonSubTypes">
             <Version>1.8.0</Version>
         </PackageReference>
