--- a/Zilon.Core/Zilon.Emulation.Common/Zilon.Emulation.Common.csproj
+++ b/Zilon.Core/Zilon.Emulation.Common/Zilon.Emulation.Common.csproj
@@ -1,12 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>net5</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="JetBrains.Annotations">
-		  <Version>2021.1.0</Version>
-		  <ExcludeAssets>runtime; build</ExcludeAssets>
-		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
